# Snake_2_C__

./: CMakeLists.txt  High_graphics_version.h  Low_graphics_version.h  README.md  high_graphics_version.cpp  low_graphics_version.cpp  main.cpp  vars.h
New folder/: CMakeLists.txt  main.cpp
